--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".GridViewActivity"
+            android:label="Results"
             android:parentActivityName=".MainActivity"
             >
         </activity>
